--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-image: url('photos/BG2.jpg');
+            background-image: url('BG2.jpg');
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
