--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             padding: 40px;
             border: 1px solid #ccc;
             border-radius: 100px;
-            background-image: url('photos/BG2.jpg');
+            background-image: url('BG2.jpg');
             box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
             opacity: .1;
             transition: opacity 1s ease;
@@ -52,14 +52,14 @@
             cursor: pointer;
             border: none;
             border-radius: 50%;
-            background-image: url('photos/BG2.jpg');
+            background-image: url('BG2.jpg');
             color: white;
             box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
         }
 
         button:hover {
             background-color: #1e81d2;
-            background-image: url('photos/BG2.jpg');
+            background-image: url('BG2.jpg');
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
